--- a/requirements.txt
+++ b/requirements.txt
@@ -51,6 +51,7 @@ requests==2.32.3
 rich==13.9.4
 ru_core_news_sm @ https://github.com/explosion/spacy-models/releases/download/ru_core_news_sm-3.8.0/ru_core_news_sm-3.8.0-py3-none-any.whl
 safetensors==0.4.5
+sentence-transformers~=3.3.0
 sentencepiece==0.2.0
 shellingham==1.5.4
 smart-open==7.0.5
