--- a/requirements.txt
+++ b/requirements.txt
@@ -10,14 +10,18 @@ cloudpathlib==0.20.0
 confection==0.1.5
 cymem==2.0.8
 DAWG-Python==0.7.2
+diskcache==5.6.3
 Django==5.1.3
 filelock==3.16.1
+fire==0.7.0
 fsspec==2024.10.0
 huggingface-hub==0.26.2
 idna==3.10
 Jinja2==3.1.4
+joblib==1.4.2
 langcodes==3.4.1
 language_data==1.2.0
+llama_cpp_python==0.3.4
 marisa-trie==1.2.1
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
@@ -39,6 +43,7 @@ nvidia-nccl-cu12==2.21.5
 nvidia-nvjitlink-cu12==12.4.127
 nvidia-nvtx-cu12==12.4.127
 packaging==24.2
+pillow==11.0.0
 preshed==3.0.9
 pydantic==2.9.2
 pydantic_core==2.23.4
@@ -51,11 +56,13 @@ requests==2.32.3
 rich==13.9.4
 ru_core_news_sm @ https://github.com/explosion/spacy-models/releases/download/ru_core_news_sm-3.8.0/ru_core_news_sm-3.8.0-py3-none-any.whl
 safetensors==0.4.5
-sentence-transformers~=3.3.0
+scikit-learn==1.5.2
+scipy==1.14.1
+sentence-transformers==3.3.1
 sentencepiece==0.2.0
 shellingham==1.5.4
 smart-open==7.0.5
--e git+https://github.com/anaviel/SmartQuizGenerator.git@d535705d1cc93e326b5a97b5e491e694cc8e1870#egg=SmartQuizGenerator&subdirectory=quiz_gen_django
+-e git+https://github.com/anaviel/SmartQuizGenerator.git@383f8bf332cad11f5c2710b1f4d79f44632291ae#egg=SmartQuizGenerator&subdirectory=quiz_gen_django
 soupsieve==2.6
 spacy==3.8.2
 spacy-legacy==3.0.12
@@ -63,7 +70,9 @@ spacy-loggers==1.0.5
 sqlparse==0.5.1
 srsly==2.4.8
 sympy==1.13.1
+termcolor==2.5.0
 thinc==8.3.2
+threadpoolctl==3.5.0
 tokenizers==0.20.3
 torch==2.5.1
 tqdm==4.67.0
