--- a/requirements.txt
+++ b/requirements.txt
@@ -50,6 +50,7 @@ pydantic_core==2.23.4
 Pygments==2.18.0
 pymorphy3==2.0.2
 pymorphy3-dicts-ru==2.4.417150.4580142
+python-dotenv==1.0.1
 PyYAML==6.0.2
 regex==2024.11.6
 requests==2.32.3
@@ -62,7 +63,7 @@ sentence-transformers==3.3.1
 sentencepiece==0.2.0
 shellingham==1.5.4
 smart-open==7.0.5
--e git+https://github.com/anaviel/SmartQuizGenerator.git@383f8bf332cad11f5c2710b1f4d79f44632291ae#egg=SmartQuizGenerator&subdirectory=quiz_gen_django
+-e git+https://github.com/anaviel/SmartQuizGenerator.git@03a8c56ce839ca75164053c6df3ca860c889908e#egg=SmartQuizGenerator&subdirectory=quiz_gen_django
 soupsieve==2.6
 spacy==3.8.2
 spacy-legacy==3.0.12
