--- a/vercel.json
+++ b/vercel.json
@@ -1,20 +1,13 @@
 {
-    "version": 2,
-    "builds": [
-        {
-            "src": "quiz_gen_django/quiz_gen_django/wsgi.py",
-            "use": "@vercel/python",
-            "config": {
-                "maxLambdaSize": "15mb",
-                "runtime": "python3.10"
-            }
+    "builds": [{
+        "src": "quiz_gen_django/quiz_gen_django/wsgi.py",
+        "use": "@vercel/python",
+        "config": {
+            "maxLambdaSize": "15mb",
+            "runtime": "python3.10"
         }
-    ],
+    }],
     "routes": [
-        {
-            "src": "quiz_gen_django/static/(.*)",
-            "dest": "quiz_gen_django/static/$1"
-        },
         {
             "src": "quiz_gen_django/(.*)",
             "dest": "quiz_gen_django/quiz_gen_django/wsgi.py"
