--- a/.gitignore
+++ b/.gitignore
@@ -8,8 +8,8 @@
 *.pyc
 __pycache__/
 local_settings.py
-db.sqlite3
-db.sqlite3-journal
+# db.sqlite3
+# db.sqlite3-journal
 media
 
 # If your build process includes running collectstatic, then you probably don't need or want to include staticfiles/
@@ -305,13 +305,13 @@ pyrightconfig.json
 .pdm-python
 
 # Ignore models folders
-quiz_gen_django/quiz_gen_django/question_generation_model/
-quiz_gen_django/quiz_gen_django/final_model/
-quiz_gen_django/quiz_gen_django/saiga_mistral_7b_gguf/
+quiz_gen_django/question_generation_model/
+quiz_gen_django/final_model/
+quiz_gen_django/saiga_mistral_7b_gguf/
 
 # Ignore database files
-quiz_gen_django/*.sqlite3
-quiz_gen_django/*.sqlite
+# *.sqlite3
+# *.sqlite
 
 # Ignore .env
 .env
