обновление процесса развёртывания

--- a/vercel.json
+++ b/vercel.json
@@ -2,19 +2,18 @@
     "version": 2,
     "builds": [
         {
-            "src": "quiz_gen_django/quiz_gen_django/wsgi.py",
+            "src": "quiz_gen_django/wsgi.py",
             "use": "@vercel/python",
             "config": {
                 "maxLambdaSize": "15mb",
-                "runtime": "python3.10",
-                "cwd": "quiz_gen_django"
+                "runtime": "python3.10"
             }
         },
         {
             "src": "build_files.sh",
             "use": "@vercel/static-build",
             "config": {
-                "distDir": "quiz_gen_django/staticfiles"
+                "distDir": "staticfiles"
             }
         }
     ],
@@ -25,7 +24,7 @@
         },
         {
             "src": "/(.*)",
-            "dest": "quiz_gen_django/quiz_gen_django/wsgi.py"
+            "dest": "quiz_gen_django/wsgi.py"
         }
     ]
 }
