--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 SECRET_KEY='DJANGO SECRET KEY HERE'
 INFERENCE_SERVER_MODE='API' # or 'LOCAL'
 API_URL_BASE='your-hosted-models-url-here'
+RUNNING_ON_VERCEL=0
 MODEL_QUESTIONS_PATH=
 MODEL_CORRECT_ANSWERS_PATH=
 MODEL_INCORRECT_ANSWERS_PATH=
