--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ sentence-transformers==3.3.1
 sentencepiece==0.2.0
 transformers==4.46.2
 httpx==0.28.1
+gunicorn==23.0.0
 llama_cpp_python>=0.3.4
 ru_core_news_sm @ https://github.com/explosion/spacy-models/releases/download/ru_core_news_sm-3.8.0/ru_core_news_sm-3.8.0-py3-none-any.whl
 -e .
