--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,7 @@ INFERENCE_SERVER_MODE='API' # or 'LOCAL'
 API_URL_BASE='your-hosted-models-url-here'
 RUNNING_ON_VERCEL=0
 CSRF_TRUSTED_ORIGIN='https://smartquizgen.YOURDOMAINHERE.wat'
+IS_DEBUG=1
 MODEL_QUESTIONS_PATH=
 MODEL_CORRECT_ANSWERS_PATH=
 MODEL_INCORRECT_ANSWERS_PATH=
